welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var ado:Boolean
            ^countTeen:5: error: type mismatch;
 found   : Int(1)
 required: String
 	ado = ado + 1
                    ^countTeen:8: error: type mismatch;
 found   : Int(1)
 required: String
 	ado = ado + 1
                    ^countTeen:11: error: type mismatch;
 found   : Int(1)
 required: String
 	ado = ado + 1
                    ^countTeen:14: error: type mismatch;
 found   : Int(1)
 required: String
 	ado = ado + 1
                    ^countTeen:16: error: type mismatch;
 found   : Boolean
 required: Int
 return ado;
        ^